; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_cl_input.c_IN_MLookUp.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_cl_input.c_IN_MLookUp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@qfalse = common dso_local global i32 0, align 4
@in_mlooking = common dso_local global i32 0, align 4
@cl_freelook = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @IN_MLookUp() #0 {
  %1 = load i32, i32* @qfalse, align 4
  store i32 %1, i32* @in_mlooking, align 4
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @cl_freelook, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  %4 = load i32, i32* %3, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %8, label %6

6:                                                ; preds = %0
  %7 = call i32 (...) @IN_CenterView()
  br label %8

8:                                                ; preds = %6, %0
  ret void
}

declare dso_local i32 @IN_CenterView(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
